# serial-discovery

./: .codespellrc  .gitignore  .golangci.yml  .licensed.yml  .prettierignore  DistTasks.yml  LICENSE.txt  README.md  Taskfile.yml  args.go  build.sh  go.mod  go.sum  main.go  package-lock.json  package.json  pyproject.toml  serialdiscovery.go  sync.go  sync_darwin.go  sync_default.go  sync_linux.go  sync_windows.go  zsyscall_windows.go
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml  feature-request.yml
.github/workflows/: check-go-dependencies-task.yml  check-go-task.yml  check-license.yml  check-markdown-task.yml  check-prettier-formatting-task.yml  check-taskfiles.yml  check-workflows-task.yml  check-yaml-task.yml  publish-go-tester-task.yml  release-go-task.yml  release.yaml  spell-check-task.yml  sync-labels.yml  test.yaml
.licenses/serial-discovery/go/github.com/arduino/: go-paths-helper.dep.yml
.licenses/serial-discovery/go/github.com/arduino/pluggable-discovery-protocol-handler/: v2.dep.yml
.licenses/serial-discovery/go/github.com/s-urbaniak/: uevent.dep.yml
.licenses/serial-discovery/go/go.bug.st/: serial.dep.yml
.licenses/serial-discovery/go/go.bug.st/serial/: enumerator.dep.yml  unixutils.dep.yml
.licenses/serial-discovery/go/golang.org/x/sys/: unix.dep.yml
.licenses/serial-discovery/go/golang.org/x/sys/internal/: unsafeheader.dep.yml
args/: args.go
sync/: sync.go  sync_bsd.go  sync_darwin.go  sync_default.go  sync_linux.go  sync_windows.go  zsyscall_windows.go
version/: version.go
