[tool.poetry]
name = "serial-discovery"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
yamllint = "^1.26.2"
codespell = "^2.1.0"

[tool.poetry.group.dev.dependencies]
codespell = "^2.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
